[package]
name = "steamguard-qr-login"
authors = ["Koray D3XX3R <public@d3xx3r.de>"]
version = "1.0.0"
edition = "2021"
repository = "https://github.com/d3xx3r/steamguard-qr-login"
keywords = ["steam", "authenticator", "auth", "steamguard", "qr-scanner"]

[dependencies]
image = { version = "0.25.1", features = ["ico"] }
rqrr = "0.7.1"
windows-hotkeys = "0.2.1"
xcap = "0.0.10"
notify-rust = "4"
tray-icon = "0.14.1"
tao = "0.28.0"
webbrowser = "1.0.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
directories = "5.0.1"

[build-dependencies]
winresource = "0.1.17"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
